| Bug #10229 | IM's show instance status never displays version | ||
|---|---|---|---|
| Submitted: | 28 Apr 2005 9:47 | Modified: | 14 Jun 2005 23:01 |
| Reporter: | Petr Chardin | ||
| Status: | Closed | ||
| Category: | Instance Manager | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Bugs System | Target Version: | |
[1 Jun 2005 2:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25427
[1 Jun 2005 22:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25480
[7 Jun 2005 15:03]
Petr Chardin
With the fix IM parses output of mysqld --no-defaults --version for each instance binary to get the version line. The result looks like this: mysql> show instance status mysqld; +---------------+---------+--------------------------------------------------------------- ----+ | instance_name | status | version | +---------------+---------+--------------------------------------------------------------- ----+ | mysqld | offline | Ver 5.0.5-beta-debug for pc-linux on i686 (Source distribution) | +---------------+---------+--------------------------------------------------------------- ----+ 1 row in set (0.00 sec)
[13 Jun 2005 23:05]
Mike Hillyer
Documented in 5.0.7 changelog.

Description: "show instance status" always shows version as "unknown" mysql> show instance status mysqld3; +---------------+--------+---------+ | instance_name | status | version | +---------------+--------+---------+ | mysqld3 | online | unknown | +---------------+--------+---------+ 1 row in set (0.00 sec) How to repeat: issue "show instance status" command and check that the version string is not shown Suggested fix: This thing was broken when it was decided to drop persistent connection to the instance. Now is is a bit tricky to implement. Probably we should drop this field. But more likely we should parse the output of appropriate "mysqld" binary