fix IM to display version string in "show instance status" (Bug #10229)